--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,12 @@
        
   </head>
   <body>
+      {% include 'navbar.html'%}
+       <img class=" rounded img-fluid"id="banner" src="./static/samsung-.jpg" alt="" height="320">
     <div class="container">
 <h1 class="text-center mt-2 mb-4"> Adi Careers</h1>
-      <img class=" rounded img-fluid"id="banner" src="./static/samsung-.jpg" alt="" height="320">
-      <h2 class="text-center mt-2 mb-4"> About Adi</h2>
+     
+      
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <h2 class="text-center mt-2 mb-4"> Job Opening</h2>
       <div class="">
@@ -24,6 +26,7 @@
       <button class="btn btn-primary btn-lg">Contact Us</button>
         </div>
     </div>
+      {% include 'footer.html'%}
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
 </html>
